--- a/html/blog.html
+++ b/html/blog.html
@@ -1,221 +1,117 @@
 <!DOCTYPE html>
-<html lang="es" class="pagina">
+<html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blog - Soluciones Informáticas</title>
   <!-- Bootstrap CSS -->
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  />
-  <link rel="stylesheet" href="../css/styles.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-  <!-- =========================================
-       HEADER (igual al index)
-       ========================================= -->
-  <header class="pagina__encabezado">
+<body class="d-flex flex-column min-vh-100 bg-light">
+
+  <!-- HEADER -->
+  <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
       <div class="container">
-        <!-- Marca/logo -->
-        <a class="navbar-brand" href="../index.html">Soluciones Informáticas</a>
-        <!-- Botón hamburguesa -->
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+        <a class="navbar-brand" href="#">Soluciones Informáticas</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <!-- Menú de navegación -->
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto gap-2">
-            <li class="nav-item">
-              <a class="nav-link" href="../index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contacto.html">Contacto</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="sobre-nosotros.html">Sobre nosotros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="servicios.html">Servicios</a>
-            </li>
-            <li class="nav-item">
-              <!-- Página actual -->
-              <a class="nav-link active" href="blog.html">Blog</a>
-            </li>
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+            <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+            <li class="nav-item"><a class="nav-link" href="sobre-nosotros.html">Sobre nosotros</a></li>
+            <li class="nav-item"><a class="nav-link" href="servicios.html">Servicios</a></li>
+            <li class="nav-item"><a class="nav-link active" href="blog.html">Blog</a></li>
           </ul>
         </div>
       </div>
     </nav>
   </header>
 
-  <!-- =========================================
-       BANNER (Carousel) (igual al index)
-       ========================================= -->
-  <div
-    id="carouselExampleIndicators"
-    class="carousel slide pagina__banner"
-    data-bs-ride="carousel"
-  >
-    <div class="carousel-indicators">
-      <button
-        type="button"
-        data-bs-target="#carouselExampleIndicators"
-        data-bs-slide-to="0"
-        class="active"
-        aria-current="true"
-        aria-label="Slide 1"
-      ></button>
-      <button
-        type="button"
-        data-bs-target="#carouselExampleIndicators"
-        data-bs-slide-to="1"
-        aria-label="Slide 2"
-      ></button>
-      <button
-        type="button"
-        data-bs-target="#carouselExampleIndicators"
-        data-bs-slide-to="2"
-        aria-label="Slide 3"
-      ></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img
-          src="../img/banner.jpg"
-          class="d-block w-100"
-          alt="Imagen de encabezado 1"
-        />
-      </div>
-      <div class="carousel-item">
-        <img
-          src="../img/banner.jpg"
-          class="d-block w-100"
-          alt="Imagen de encabezado 2"
-        />
-      </div>
-      <div class="carousel-item">
-        <img
-          src="../img/banner.jpg"
-          class="d-block w-100"
-          alt="Imagen de encabezado 3"
-        />
-      </div>
-    </div>
-    <button
-      class="carousel-control-prev"
-      type="button"
-      data-bs-target="#carouselExampleIndicators"
-      data-bs-slide="prev"
-    >
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Anterior</span>
-    </button>
-    <button
-      class="carousel-control-next"
-      type="button"
-      data-bs-target="#carouselExampleIndicators"
-      data-bs-slide="next"
-    >
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Siguiente</span>
-    </button>
-  </div>
+  <!-- MAIN -->
+  <main class="container my-4 flex-grow-1">
+    <!-- Introducción -->
+    <section class="text-center mb-4">
+      <h2 class="mb-3">Bienvenido a nuestro Blog</h2>
+      <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque aliquam, augue nec fermentum vehicula, purus lacus laoreet ligula, ut vestibulum mauris dui non justo.</p>
+    </section>
 
-  <!-- =========================================
-       MAIN (igual estructura al index)
-       ========================================= -->
-  <main class="pagina__contenido">
-    <div class="container my-4 blog">
-      <!-- Introducción al blog -->
-      <section class="blog__introduccion mb-4 text-left">
-        <h2 class="mb-3">Bienvenido a nuestro Blog</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
-          aliquam, augue nec fermentum vehicula, purus lacus laoreet ligula,
-          ut vestibulum mauris dui non justo.
-        </p>
-      </section>
-      <!-- Últimas Publicaciones -->
-      <section class="blog__publicaciones">
-        <h2 class="mb-4">Últimas Publicaciones</h2>
-        <div class="row g-4">
-          <!-- Artículo 1 -->
-          <article class="col-md-4 blog__post">
-            <div class="card h-100">
-              <div class="card-body">
-                <h3 class="card-title">
-                  Artículo 1: Introducción al Desarrollo Web
-                </h3>
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Integer nec odio. Praesent libero. Sed cursus ante dapibus
-                  diam.
-                </p>
-                <a href="#" class="btn btn-primary">Leer más...</a>
-              </div>
-            </div>
-          </article>
-          <!-- Artículo 2 -->
-          <article class="col-md-4 blog__post">
-            <div class="card h-100">
-              <div class="card-body">
-                <h3 class="card-title">Artículo 2: Mejores prácticas de UX/UI</h3>
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Integer nec odio. Praesent libero. Sed cursus ante dapibus
-                  diam.
-                </p>
-                <a href="#" class="btn btn-primary">Leer más...</a>
-              </div>
-            </div>
-          </article>
-          <!-- Artículo 3 -->
-          <article class="col-md-4 blog__post">
-            <div class="card h-100">
-              <div class="card-body">
-                <h3 class="card-title">
-                  Artículo 3: Cómo mejorar el rendimiento de tu sitio web
-                </h3>
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Integer nec odio. Praesent libero. Sed cursus ante dapibus
-                  diam.
-                </p>
-                <a href="#" class="btn btn-primary">Leer más...</a>
-              </div>
-            </div>
-          </article>
+    <!-- Carrusel -->
+    <div id="carouselExample" class="carousel slide mb-5" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="../img/carrousel3.jpg" class="d-block w-100" alt="Banner de innovación tecnológica"">
         </div>
-      </section>
+        <div class="carousel-item">
+          <img src="../img/carrousel2.jpg" class="d-block w-100" alt="Banner de innovación tecnológica"">
+        </div>
+        <div class="carousel-item">
+          <img src="../img/carrousel1.jpg" class="d-block w-100" alt="Banner de innovación tecnológica"">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
+
+    <!-- Últimas Publicaciones -->
+    <section>
+      <h2 class="text-center mb-4">Últimas Publicaciones</h2>
+      <div class="row g-4">
+        <!-- Artículo 1 -->
+        <div class="col-md-4">
+          <div class="card h-100 shadow-sm">
+            <div class="card-body d-flex flex-column">
+              <h3 class="card-title text-center">Artículo 1: Introducción al Desarrollo Web</h3>
+              <p class="card-text text-center text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio.</p>
+              <a href="#" class="btn btn-primary mt-auto">Leer más...</a>
+            </div>
+          </div>
+        </div>
+        <!-- Artículo 2 -->
+        <div class="col-md-4">
+          <div class="card h-100 shadow-sm">
+            <div class="card-body d-flex flex-column">
+              <h3 class="card-title text-center">Artículo 2: Mejores prácticas de UX/UI</h3>
+              <p class="card-text text-center text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio.</p>
+              <a href="#" class="btn btn-primary mt-auto">Leer más...</a>
+            </div>
+          </div>
+        </div>
+        <!-- Artículo 3 -->
+        <div class="col-md-4">
+          <div class="card h-100 shadow-sm">
+            <div class="card-body d-flex flex-column">
+              <h3 class="card-title text-center">Artículo 3: Cómo mejorar el rendimiento de tu sitio web</h3>
+              <p class="card-text text-center text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio.</p>
+              <a href="#" class="btn btn-primary mt-auto">Leer más...</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
-  <!-- =========================================
-       FOOTER (igual al index)
-       ========================================= -->
-  <footer
-    class="pagina__pie d-flex flex-wrap justify-content-around align-items-center p-2"
-  >
-    <div class="pie__enlace">Sección 1</div>
-    <div class="pie__enlace">Sección 2</div>
-    <div class="pie__enlace">Sección 3</div>
-    <p>&copy; 2024 Soluciones Informáticas. Todos los derechos reservados.</p>
+  <!-- FOOTER -->
+  <footer class="bg-dark text-white text-center py-3 mt-auto">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-2 mr-3">Sección 1</div>
+        <div class="col-md-2 mr-3">Sección 2</div>
+        <div class="col-md-2 mr-3">Sección 3</div>
+        <div class="col-md-6 mr-3">2024 Soluciones Informáticas. Todos los derechos reservados.</div>
+      </div>
+    </div>
   </footer>
 
   <!-- Bootstrap JS -->
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-  ></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
-
