--- a/html/contacto.html
+++ b/html/contacto.html
@@ -1,181 +1,122 @@
 <!DOCTYPE html>
 <html lang="es" class="pagina">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contacto - Soluciones Informáticas</title>
-  <!-- Bootstrap CSS -->
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  />
-  <link rel="stylesheet" href="../css/styles.css" />
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Contacto - Soluciones Informáticas</title>
+	<!-- Bootstrap CSS -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+	<link rel="stylesheet" href="../css/styles.css" />
 </head>
 <body class="pagina contacto">
-  <!-- HEADER -->
-  <header class="pagina__encabezado">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
-      <div class="container">
-        <a class="navbar-brand" href="../index.html">Soluciones Informáticas</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+	<!-- HEADER -->
+	<header class="pagina__encabezado">
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
+			<div class="container">
+				<a class="navbar-brand" href="../index.html">Soluciones Informáticas</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto gap-2">
-            <li class="nav-item">
-              <a class="nav-link" href="../index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="contacto.html">Contacto</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="sobre-nosotros.html">Sobre nosotros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="servicios.html">Servicios</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="blog.html">Blog</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </header>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav ms-auto gap-2">
+						<li class="nav-item">
+							<a class="nav-link" href="../index.html">Inicio</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link active" href="contacto.html">Contacto</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="sobre-nosotros.html">Sobre nosotros</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="servicios.html">Servicios</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="blog.html">Blog</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</header>
 
-  <!-- BANNER -->
-  <div
-    id="carouselExampleIndicators"
-    class="carousel slide pagina__banner"
-    data-bs-ride="carousel"
-  >
-    <div class="carousel-indicators">
-      <button
-        type="button"
-        data-bs-target="#carouselExampleIndicators"
-        data-bs-slide-to="0"
-        class="active"
-        aria-current="true"
-        aria-label="Slide 1"
-      ></button>
-      <button
-        type="button"
-        data-bs-target="#carouselExampleIndicators"
-        data-bs-slide-to="1"
-        aria-label="Slide 2"
-      ></button>
-      <button
-        type="button"
-        data-bs-target="#carouselExampleIndicators"
-        data-bs-slide-to="2"
-        aria-label="Slide 3"
-      ></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img
-          src="../img/banner.jpg"
-          class="d-block w-100"
-          alt="Imagen de encabezado 1"
-        />
-      </div>
-      <div class="carousel-item">
-        <img
-          src="../img/banner.jpg"
-          class="d-block w-100"
-          alt="Imagen de encabezado 2"
-        />
-      </div>
-      <div class="carousel-item">
-        <img
-          src="../img/banner.jpg"
-          class="d-block w-100"
-          alt="Imagen de encabezado 3"
-        />
-      </div>
-    </div>
-    <button
-      class="carousel-control-prev"
-      type="button"
-      data-bs-target="#carouselExampleIndicators"
-      data-bs-slide="prev"
-    >
+	<!-- BANNER -->
+	<div id="carouselExampleIndicators" class="carousel slide pagina__banner" data-bs-ride="carousel">
+		<div class="carousel-indicators">
+			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+		</div>
+		<div class="carousel-inner">
+			<div class="carousel-item active"><img src="../img/carrousel3.jpg" class="d-block w-100" alt="Banner de innovación tecnológica"></div>
+			<div class="carousel-item"><img src="../img/carrousel2.jpg" class="d-block w-100" alt="Banner de soluciones personalizadas"></div>
+			<div class="carousel-item"><img src="img/carrousel1.jpg" class="d-block w-100" alt="Banner de soporte técnico experto"></div>
+		</div>
+	</div>
+	<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Anterior</span>
     </button>
-    <button
-      class="carousel-control-next"
-      type="button"
-      data-bs-target="#carouselExampleIndicators"
-      data-bs-slide="next"
-    >
+	<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Siguiente</span>
     </button>
-  </div>
+	</div>
 
-  <!-- MAIN -->
-  <main class="pagina__contenido">
-    <div class="container contacto__contenedor">
-      <!-- Introducción -->
-      <section class="contacto__introduccion">
-        <h2>Ponte en contacto con nosotros</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut aliquet, felis nec cursus convallis, ipsum lorem iaculis justo, a dictum mi ex non felis.
-        </p>
-      </section>
-  
-      <!-- Formulario -->
-      <section class="contacto__formulario">
-        <h2>Formulario de contacto</h2>
-        <form class="formulario-grid">
-          <div class="nombre">
-            <label for="nombre">Nombre:</label>
-            <input type="text" id="nombre" name="nombre" placeholder="Tu nombre" required />
-          </div>
-          <div class="email">
-            <label for="email">Correo Electrónico:</label>
-            <input type="email" id="email" name="email" placeholder="Tu correo electrónico" required />
-          </div>
-          <div class="mensaje">
-            <label for="mensaje">Mensaje:</label>
-            <textarea id="mensaje" name="mensaje" rows="5" placeholder="Escribe tu mensaje aquí..." required></textarea>
-          </div>
-          <div class="boton">
-            <button type="submit" class="btn-enviar">Enviar</button>
-          </div>
-        </form>
-      </section>
-  
-      <!-- Información adicional -->
-      <section class="contacto__info">
-        <h2>Información adicional</h2>
-        <p><strong>Correo:</strong> a.aguirremneny@solucionesinformaticas.com</p>
-        <p><strong>Teléfono:</strong> +54 381 618 2287</p>
-        <p><strong>Dirección:</strong> San Lorenzo 1612, San Miguel de Tucumán</p>
-      </section>
-    </div>
-  </main>
-  
+	<!-- MAIN -->
+	<main class="pagina__contenido">
+		<div class="container contacto__contenedor">
+			<!-- Introducción -->
+			<section class="contacto__introduccion">
+				<h2>Ponte en contacto con nosotros</h2>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut aliquet, felis nec cursus convallis, ipsum lorem iaculis justo, a dictum mi ex non felis.
+				</p>
+			</section>
 
-  <!-- FOOTER (Grid-area: pie) -->
-  <footer class="pagina__pie">
-    <div>Enlace 1</div>
-    <div>Enlace 2</div>
-    <div>Enlace 3</div>
-    <p>&copy; 2024 Soluciones Informáticas. Todos los derechos reservados.</p>
-  </footer>
+			<!-- Formulario -->
+			<section class="contacto__formulario">
+				<h2>Formulario de contacto</h2>
+				<form class="formulario-grid">
+					<div class="nombre">
+						<label for="nombre">Nombre:</label>
+						<input type="text" id="nombre" name="nombre" placeholder="Tu nombre" required />
+					</div>
+					<div class="email">
+						<label for="email">Correo Electrónico:</label>
+						<input type="email" id="email" name="email" placeholder="Tu correo electrónico" required />
+					</div>
+					<div class="mensaje">
+						<label for="mensaje">Mensaje:</label>
+						<textarea id="mensaje" name="mensaje" rows="5" placeholder="Escribe tu mensaje aquí..." required></textarea>
+					</div>
+					<div class="boton">
+						<button type="submit" class="btn-enviar">Enviar</button>
+					</div>
+				</form>
+			</section>
+
+			<!-- Información adicional -->
+			<section class="contacto__info">
+				<h2>Información adicional</h2>
+				<p><strong>Correo:</strong> a.aguirremneny@solucionesinformaticas.com</p>
+				<p><strong>Teléfono:</strong> +54 381 618 2287</p>
+				<p><strong>Dirección:</strong> San Lorenzo 1612, San Miguel de Tucumán</p>
+			</section>
+		</div>
+	</main>
 
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+	<!-- FOOTER (Grid-area: pie) -->
+	<footer class="pagina__pie">
+		<div>Enlace 1</div>
+		<div>Enlace 2</div>
+		<div>Enlace 3</div>
+		<p>&copy; 2024 Soluciones Informáticas. Todos los derechos reservados.</p>
+	</footer>
+
+
+	<!-- Bootstrap JS -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
