--- a/html/sobre-nosotros.html
+++ b/html/sobre-nosotros.html
@@ -1,174 +1,112 @@
 <!DOCTYPE html>
 <html lang="es" class="pagina">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sobre Nosotros - Soluciones Informáticas</title>
-  <!-- Bootstrap CSS -->
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  />
-  <!-- Estilos personalizados -->
-  <link rel="stylesheet" href="../css/styles.css" />
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Sobre Nosotros - Soluciones Informáticas</title>
+	<!-- Bootstrap CSS -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+	<!-- Estilos personalizados -->
+	<link rel="stylesheet" href="../css/styles.css" />
 </head>
 <body>
-  <!-- HEADER -->
-  <header class="pagina__encabezado">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
-      <div class="container">
-        <a class="navbar-brand" href="../index.html">Soluciones Informáticas</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+	<!-- HEADER -->
+	<header class="pagina__encabezado">
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
+			<div class="container">
+				<a class="navbar-brand" href="../index.html">Soluciones Informáticas</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto gap-2">
-            <li class="nav-item">
-              <a class="nav-link" href="../index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contacto.html">Contacto</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="sobre-nosotros.html">Sobre nosotros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="servicios.html">Servicios</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="blog.html">Blog</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </header>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav ms-auto gap-2">
+						<li class="nav-item">
+							<a class="nav-link" href="../index.html">Inicio</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="contacto.html">Contacto</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link active" href="sobre-nosotros.html">Sobre nosotros</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="servicios.html">Servicios</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="blog.html">Blog</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</header>
 
-  <!-- BANNER -->
-  <div
-    id="carouselExampleIndicators"
-    class="carousel slide pagina__banner"
-    data-bs-ride="carousel"
-  >
-    <div class="carousel-indicators">
-      <button
-        type="button"
-        data-bs-target="#carouselExampleIndicators"
-        data-bs-slide-to="0"
-        class="active"
-        aria-current="true"
-        aria-label="Slide 1"
-      ></button>
-      <button
-        type="button"
-        data-bs-target="#carouselExampleIndicators"
-        data-bs-slide-to="1"
-        aria-label="Slide 2"
-      ></button>
-      <button
-        type="button"
-        data-bs-target="#carouselExampleIndicators"
-        data-bs-slide-to="2"
-        aria-label="Slide 3"
-      ></button>
-    </div>
+	<!-- BANNER -->
+	<div id="carouselExampleIndicators" class="carousel slide pagina__banner" data-bs-ride="carousel">
+		<div class="carousel-indicators">
+			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+		</div>
     <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img
-          src="../img/banner.jpg"
-          class="d-block w-100"
-          alt="Imagen de encabezado 1"
-        />
-      </div>
-      <div class="carousel-item">
-        <img
-          src="../img/banner.jpg"
-          class="d-block w-100"
-          alt="Imagen de encabezado 2"
-        />
-      </div>
-      <div class="carousel-item">
-        <img
-          src="../img/banner.jpg"
-          class="d-block w-100"
-          alt="Imagen de encabezado 3"
-        />
-      </div>
+      <div class="carousel-item active"><img src="../img/carrousel2.jpg" class="d-block w-100" alt="Banner de innovación tecnológica"></div>
+      <div class="carousel-item"><img src="img/carrousel1.jpg" class="d-block w-100" alt="Banner de soluciones personalizadas"></div>
+      <div class="carousel-item"><img src="img/carrousel3.jpg" class="d-block w-100" alt="Banner de soporte técnico experto"></div>
     </div>
-    <button
-      class="carousel-control-prev"
-      type="button"
-      data-bs-target="#carouselExampleIndicators"
-      data-bs-slide="prev"
-    >
+		</div>
+		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Anterior</span>
     </button>
-    <button
-      class="carousel-control-next"
-      type="button"
-      data-bs-target="#carouselExampleIndicators"
-      data-bs-slide="next"
-    >
+		<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Siguiente</span>
     </button>
-  </div>
+	</div>
 
-  <!-- MAIN -->
-  <main class="pagina__contenido">
-    <div class="sobre-nosotros">
-      <section class="sobre-nosotros__quienes">
-        <h2>¿Quiénes somos?</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      </section>
-      <section class="sobre-nosotros__experiencia">
-        <h2>Nuestra experiencia</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      </section>
-      <section class="sobre-nosotros__habilidades">
-        <div class="habilidad">
-          <h3>Habilidades Técnicas</h3>
-          <ul>
-            <li>Desarrollo Web</li>
-            <li>HTML, CSS, JavaScript</li>
-            <li>Gestión de Proyectos</li>
-          </ul>
-        </div>
-        <div class="habilidad">
-          <h3>Habilidades Blandas</h3>
-          <ol>
-            <li>Comunicación efectiva</li>
-            <li>Trabajo en equipo</li>
-            <li>Resolución de problemas</li>
-          </ol>
-        </div>
-      </section>
-      <section class="sobre-nosotros__objetivo">
-        <h2>Mi objetivo</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      </section>
-    </div>
-  </main>
+	<main class="sobre-nosotros-contenedor">
+		<section class="sobre-nosotros-intro">
+			<h2>¿Quiénes somos?</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+		</section>
 
-  <!-- FOOTER -->
-  <footer class="pagina__pie">
-    <div>Enlace 1</div>
-    <div>Enlace 2</div>
-    <div>Enlace 3</div>
-    <p>&copy; 2024 Soluciones Informáticas. Todos los derechos reservados.</p>
-  </footer>
+		<section class="sobre-nosotros-experiencia">
+			<h2>Nuestra experiencia</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+		</section>
 
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-  ></script>
+		<section class="sobre-nosotros-habilidades">
+			<div class="habilidad">
+				<h3>Habilidades Técnicas</h3>
+				<ul>
+					<li>Desarrollo Web</li>
+					<li>HTML, CSS, JavaScript</li>
+					<li>Gestión de Proyectos</li>
+				</ul>
+			</div>
+			<div class="habilidad">
+				<h3>Habilidades Blandas</h3>
+				<ol>
+					<li>Comunicación efectiva</li>
+					<li>Trabajo en equipo</li>
+					<li>Resolución de problemas</li>
+				</ol>
+			</div>
+		</section>
+
+		<section class="sobre-nosotros-objetivo">
+			<h2>Mi objetivo</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+		</section>
+	</main>
+
+	<!-- FOOTER -->
+	<footer class="pagina__pie">
+		<div>Enlace 1</div>
+		<div>Enlace 2</div>
+		<div>Enlace 3</div>
+		<p>&copy; 2024 Soluciones Informáticas. Todos los derechos reservados.</p>
+	</footer>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
