--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
     </nav>
   </header>
 
-  <!-- BANNER (Grid-area: banner) -->
   <div id="carouselExampleIndicators" class="carousel slide pagina__banner" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -54,9 +53,15 @@
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
     <div class="carousel-inner">
-      <div class="carousel-item active"><img src="img/banner1.jpg" class="d-block w-100" alt="Banner de innovación tecnológica"></div>
-      <div class="carousel-item"><img src="img/banner2.jpg" class="d-block w-100" alt="Banner de soluciones personalizadas"></div>
-      <div class="carousel-item"><img src="img/banner3.jpg" class="d-block w-100" alt="Banner de soporte técnico experto"></div>
+      <div class="carousel-item active">
+        <img src="img/carrousel1.jpg" class="d-block w-100" alt="Banner de innovación tecnológica">
+      </div>
+      <div class="carousel-item">
+        <img src="img/carrousel2.jpg" class="d-block w-100" alt="Banner de soluciones personalizadas">
+      </div>
+      <div class="carousel-item">
+        <img src="img/carrousel3.jpg" class="d-block w-100" alt="Banner de soporte técnico experto">
+      </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -67,6 +72,7 @@
       <span class="visually-hidden">Siguiente</span>
     </button>
   </div>
+  
 
   <!-- MAIN (Grid-area: contenido) -->
   <main class="pagina__contenido">
