Se realizan ajustes en los códigos HTML, se reempl azan los textos con "Lorem Ipsum" y también los textos genéricos como los del Footer. Se simplifican los comentarios

--- a/index.html
+++ b/index.html
@@ -1,36 +1,28 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Soluciones Informáticas: Servicios de tecnología de calidad para tu negocio." />
-  <meta name="keywords" content="tecnología, servicios informáticos, desarrollo web, soporte técnico" />
+  <meta name="description" content="Soluciones Informáticas: Servicios IT integrados con inteligencia artificial para potenciar tu negocio." />
+  <meta name="keywords" content="tecnología, servicios IT, inteligencia artificial, desarrollo web, soporte técnico" />
   <meta name="author" content="Soluciones Informáticas" />
   <title>Soluciones Informáticas - Inicio</title>
 
-  <!-- Bootstrap CSS (solo para Navbar y Carousel) -->
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  />
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <!-- Estilos personalizados -->
   <link rel="stylesheet" href="css/styles.css" />
 </head>
+
 <body class="pagina">
-  <!-- HEADER (Grid-area: encabezado) -->
+  <!-- HEADER -->
   <header class="pagina__encabezado">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand" href="#">Soluciones Informáticas</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -48,92 +40,97 @@
 
   <div id="carouselExampleIndicators" class="carousel slide pagina__banner" data-bs-ride="carousel">
     <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+        aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+        aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+        aria-label="Slide 3"></button>
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="img/carrousel1.jpg" class="d-block w-100" alt="Banner de innovación tecnológica">
+        <img src="img/carrousel1.jpg" class="d-block w-100" alt="Innovación tecnológica con IA">
       </div>
       <div class="carousel-item">
-        <img src="img/carrousel2.jpg" class="d-block w-100" alt="Banner de soluciones personalizadas">
+        <img src="img/carrousel2.jpg" class="d-block w-100" alt="Soluciones IT personalizadas">
       </div>
       <div class="carousel-item">
-        <img src="img/carrousel3.jpg" class="d-block w-100" alt="Banner de soporte técnico experto">
+        <img src="img/carrousel3.jpg" class="d-block w-100" alt="Soporte técnico avanzado">
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+      data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Anterior</span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+      data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Siguiente</span>
     </button>
   </div>
-  
 
-  <!-- MAIN (Grid-area: contenido) -->
+  <!-- MAIN -->
   <main class="pagina__contenido">
     <!-- Sección Principal -->
     <section class="contenido__principal">
-      <h2>Sección Principal</h2>
+      <h2>Soluciones IT con Inteligencia Artificial</h2>
       <p>
-        Ofrecemos servicios tecnológicos de calidad para mejorar tu negocio. Desde desarrollo web hasta soporte técnico,
-        nuestro equipo especializado está listo para ayudarte.
+        Potencia tu negocio con nuestras soluciones integrales en IT y tecnologías de inteligencia artificial. Desarrollamos proyectos de
+        desarrollo web, automatización de procesos y ofrecemos soporte técnico avanzado para optimizar tus operaciones.
       </p>
     </section>
 
-    <!-- Noticias rápidas -->
+    <!-- Noticias -->
     <aside class="contenido__lateral">
-      <h3>Noticias Rápidas</h3>
+      <h3>Noticias</h3>
       <ul>
-        <li>Últimas tendencias en desarrollo web</li>
-        <li>Actualizaciones de hardware</li>
-        <li>Promociones especiales en nuestros servicios</li>
+        <li>Novedades en inteligencia artificial aplicada a negocios</li>
+        <li>Actualizaciones en ciberseguridad y tecnología</li>
+        <li>Lanzamiento de nuestro asistente virtual inteligente</li>
       </ul>
     </aside>
 
-    <!-- Artículo Destacado -->
+    <!-- Artículo -->
     <article class="contenido__articulo">
-      <h2>Artículo Destacado</h2>
+      <h2>Transforma tu Empresa con IA</h2>
       <p>
-        Descubre cómo nuestra experiencia y tecnología pueden transformar tu negocio. Contáctanos para más información y
-        obtén un asesoramiento especializado.
+        Descubre cómo la integración de soluciones IT y la inteligencia artificial puede optimizar procesos y aumentar la eficiencia en tu
+        empresa. Contáctanos para recibir asesoramiento personalizado y dar el primer paso hacia la transformación digital.
       </p>
     </article>
 
     <!-- Listas -->
     <div class="contenido__listas">
       <div>
-        <h2>Beneficios de nuestros servicios</h2>
+        <h2>Beneficios de Nuestros Servicios</h2>
         <ul>
-          <li>Soluciones personalizadas</li>
-          <li>Soporte técnico experto</li>
-          <li>Innovación constante</li>
+          <li>Soluciones personalizadas y escalables</li>
+          <li>Soporte técnico especializado</li>
+          <li>Integración de inteligencia artificial avanzada</li>
         </ul>
       </div>
       <div>
-        <h2>Pasos para trabajar con nosotros</h2>
+        <h2>Cómo Empezar</h2>
         <ol>
-          <li>Contáctanos</li>
-          <li>Consulta inicial</li>
-          <li>Implementación de soluciones</li>
+          <li>Contáctanos para una consulta</li>
+          <li>Análisis de tus necesidades tecnológicas</li>
+          <li>Implementación de soluciones innovadoras</li>
         </ol>
       </div>
     </div>
   </main>
 
-  <!-- FOOTER (Grid-area: pie) -->
+  <!-- FOOTER -->
   <footer class="pagina__pie">
-    <div>Enlace 1</div>
-    <div>Enlace 2</div>
-    <div>Enlace 3</div>
+    <div><a href="html/aviso-legal.html">Aviso Legal</a></div>
+    <div><a href="html/politica-privacidad.html">Política de Privacidad</a></div>
+    <div><a href="html/terminos.html">Términos y Condiciones</a></div>
     <p>&copy; 2024 Soluciones Informáticas. Todos los derechos reservados.</p>
   </footer>
 
-  <!-- Bootstrap JS (solo para Navbar y Carousel) -->
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
