--- a/html/blog.html
+++ b/html/blog.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body class="d-flex flex-column min-vh-100 bg-light">
 
   <!-- HEADER -->
@@ -14,7 +16,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
       <div class="container">
         <a class="navbar-brand" href="#">Soluciones Informáticas</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -35,29 +38,33 @@
     <!-- Introducción -->
     <section class="text-center mb-4">
       <h2 class="mb-3">Bienvenido a nuestro Blog</h2>
-      <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque aliquam, augue nec fermentum vehicula, purus lacus laoreet ligula, ut vestibulum mauris dui non justo.</p>
+      <p class="text-muted">
+        Descubre las últimas tendencias en tecnología, inteligencia artificial y servicios IT. Te ofrecemos análisis,
+        consejos y
+        novedades para impulsar tu negocio con soluciones innovadoras.
+      </p>
     </section>
 
     <!-- Carrusel -->
     <div id="carouselExample" class="carousel slide mb-5" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../img/carrousel3.jpg" class="d-block w-100" alt="Banner de innovación tecnológica"">
+          <img src="../img/carrousel3.jpg" class="d-block w-100" alt="Innovación en inteligencia artificial">
         </div>
         <div class="carousel-item">
-          <img src="../img/carrousel2.jpg" class="d-block w-100" alt="Banner de innovación tecnológica"">
+          <img src="../img/carrousel2.jpg" class="d-block w-100" alt="Soluciones IT disruptivas">
         </div>
         <div class="carousel-item">
-          <img src="../img/carrousel1.jpg" class="d-block w-100" alt="Banner de innovación tecnológica"">
+          <img src="../img/carrousel1.jpg" class="d-block w-100" alt="Soporte técnico avanzado">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
+        <span class="visually-hidden">Anterior</span>
       </button>
       <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
+        <span class="visually-hidden">Siguiente</span>
       </button>
     </div>
 
@@ -69,8 +76,12 @@
         <div class="col-md-4">
           <div class="card h-100 shadow-sm">
             <div class="card-body d-flex flex-column">
-              <h3 class="card-title text-center">Artículo 1: Introducción al Desarrollo Web</h3>
-              <p class="card-text text-center text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio.</p>
+              <h3 class="card-title text-center">Cómo la IA Revoluciona el Desarrollo Web</h3>
+              <p class="card-text text-center text-muted">
+                Explora cómo la integración de inteligencia artificial está transformando el desarrollo y optimización
+                de sitios web para
+                mejorar la experiencia del usuario.
+              </p>
               <a href="#" class="btn btn-primary mt-auto">Leer más...</a>
             </div>
           </div>
@@ -79,8 +90,12 @@
         <div class="col-md-4">
           <div class="card h-100 shadow-sm">
             <div class="card-body d-flex flex-column">
-              <h3 class="card-title text-center">Artículo 2: Mejores prácticas de UX/UI</h3>
-              <p class="card-text text-center text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio.</p>
+              <h3 class="card-title text-center">Tendencias en UX/UI para la Era Digital</h3>
+              <p class="card-text text-center text-muted">
+                Descubre las mejores prácticas y herramientas que están definiendo el futuro del diseño de interfaces y
+                la experiencia de
+                usuario.
+              </p>
               <a href="#" class="btn btn-primary mt-auto">Leer más...</a>
             </div>
           </div>
@@ -89,8 +104,12 @@
         <div class="col-md-4">
           <div class="card h-100 shadow-sm">
             <div class="card-body d-flex flex-column">
-              <h3 class="card-title text-center">Artículo 3: Cómo mejorar el rendimiento de tu sitio web</h3>
-              <p class="card-text text-center text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio.</p>
+              <h3 class="card-title text-center">Optimización del Rendimiento Web con Tecnología Avanzada</h3>
+              <p class="card-text text-center text-muted">
+                Aprende estrategias y técnicas innovadoras para mejorar la velocidad y eficiencia de tu sitio web
+                utilizando soluciones IT de
+                vanguardia.
+              </p>
               <a href="#" class="btn btn-primary mt-auto">Leer más...</a>
             </div>
           </div>
@@ -99,14 +118,14 @@
     </section>
   </main>
 
-  <!-- FOOTER -->
+  <!-- SECCIÓN FOOTER -->
   <footer class="bg-dark text-white text-center py-3 mt-auto">
     <div class="container">
       <div class="row">
-        <div class="col-md-2 mr-3">Sección 1</div>
-        <div class="col-md-2 mr-3">Sección 2</div>
-        <div class="col-md-2 mr-3">Sección 3</div>
-        <div class="col-md-6 mr-3">2024 Soluciones Informáticas. Todos los derechos reservados.</div>
+        <div class="col-md-2">Aviso Legal</div>
+        <div class="col-md-2">Política de Privacidad</div>
+        <div class="col-md-2">Términos de Uso</div>
+        <div class="col-md-6">2024 Soluciones Informáticas. Todos los derechos reservados.</div>
       </div>
     </div>
   </footer>
@@ -114,4 +133,5 @@
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
