--- a/html/servicios.html
+++ b/html/servicios.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es" class="pagina">
+
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,21 +9,17 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 	<link rel="stylesheet" href="../css/styles.css" />
 </head>
+
 <body>
-	<!-- =========================================
-       HEADER
-       ========================================= -->
+	<!-- HEADER -->
 	<header class="pagina__encabezado">
-		<!-- Navbar idéntico al de index -->
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
 			<div class="container">
-				<!-- Logo o nombre de la marca -->
 				<a class="navbar-brand" href="../index.html">Soluciones Informáticas</a>
-				<!-- Botón hamburguesa en dispositivos móviles -->
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-				<!-- Menú de navegación -->
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+					aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
 				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav ms-auto gap-2">
 						<li class="nav-item">
@@ -35,7 +32,6 @@
 							<a class="nav-link" href="sobre-nosotros.html">Sobre nosotros</a>
 						</li>
 						<li class="nav-item">
-							<!-- Agregamos 'active' aquí para marcar la página actual -->
 							<a class="nav-link active" href="servicios.html">Servicios</a>
 						</li>
 						<li class="nav-item">
@@ -47,79 +43,93 @@
 		</nav>
 	</header>
 
-	<!-- =========================================
-       BANNER (Carousel) igual que en index
-       ========================================= -->
+	<!-- BANNER -->
 	<div id="carouselExampleIndicators" class="carousel slide pagina__banner" data-bs-ride="carousel">
 		<div class="carousel-indicators">
-			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+				aria-current="true" aria-label="Slide 1"></button>
+			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+				aria-label="Slide 2"></button>
+			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+				aria-label="Slide 3"></button>
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="../img/carrousel1.jpg" class="d-block w-100" alt="Imagen de encabezado 1" />
+				<img src="../img/carrousel1.jpg" class="d-block w-100" alt="Innovación en desarrollo web">
 			</div>
 			<div class="carousel-item">
-				<img src="../img/carrousel3.jpg" class="d-block w-100" alt="Imagen de encabezado 2" />
+				<img src="../img/carrousel3.jpg" class="d-block w-100" alt="Estrategias tecnológicas con IA">
 			</div>
 			<div class="carousel-item">
-				<img src="../img/carrousel2.jpg" class="d-block w-100" alt="Imagen de encabezado 3" />
+				<img src="../img/carrousel2.jpg" class="d-block w-100" alt="Soporte técnico avanzado">
 			</div>
 		</div>
-		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Anterior</span>
-    </button>
-		<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Siguiente</span>
-    </button>
+		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+			data-bs-slide="prev">
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			<span class="visually-hidden">Anterior</span>
+		</button>
+		<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+			data-bs-slide="next">
+			<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			<span class="visually-hidden">Siguiente</span>
+		</button>
 	</div>
 
-  <main class="servicios-contenedor">
+	<!-- MAIN -->
+	<main class="servicios-contenedor">
 		<div class="servicios-intro">
 			<h2>¿Qué ofrecemos?</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus non augue eget justo consequat tincidunt vel ut nulla.</p>
+			<p>
+				En Soluciones Informáticas fusionamos tecnología y inteligencia artificial para brindar soluciones IT
+				innovadoras que transforman tu negocio.
+			</p>
 		</div>
 
 		<div class="servicios-grid">
 			<div class="servicio">
 				<h3>Desarrollo Web</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+				<p>
+					Diseñamos y desarrollamos sitios web modernos y responsivos, integrando herramientas de IA para
+					optimizar la experiencia del usuario.
+				</p>
 			</div>
 			<div class="servicio">
 				<h3>Consultoría Tecnológica</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+				<p>
+					Asesoramos en la implementación de soluciones tecnológicas y estrategias digitales basadas en
+					inteligencia artificial para impulsar tu crecimiento.
+				</p>
 			</div>
 			<div class="servicio">
 				<h3>Optimización SEO</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+				<p>
+					Mejoramos la visibilidad de tu sitio web aplicando técnicas avanzadas de SEO y análisis de datos
+					para posicionarte en los primeros lugares.
+				</p>
 			</div>
 		</div>
 
 		<div class="razones">
 			<h2>Por qué elegirnos</h2>
 			<ul>
-				<li>Experiencia comprobada en el sector.</li>
-				<li>Soluciones personalizadas para cada cliente.</li>
-				<li>Soporte continuo y eficaz.</li>
+				<li>Experiencia comprobada en soluciones IT y tecnologías de vanguardia.</li>
+				<li>Implementamos soluciones personalizadas basadas en inteligencia artificial.</li>
+				<li>Soporte continuo y asesoramiento especializado para tu negocio.</li>
 			</ul>
 		</div>
 	</main>
 
-
-	<!-- =========================================
-       FOOTER (mismo formato que index)
-       ========================================= -->
+	<!-- FOOTER -->
 	<footer class="pagina__pie d-flex flex-wrap justify-content-around align-items-center">
-		<div>Enlace 1</div>
-		<div>Enlace 2</div>
-		<div>Enlace 3</div>
+		<div><a href="aviso-legal.html">Aviso Legal</a></div>
+		<div><a href="politica-privacidad.html">Política de Privacidad</a></div>
+		<div><a href="terminos.html">Términos y Condiciones</a></div>
 		<p>&copy; 2024 Soluciones Informáticas. Todos los derechos reservados.</p>
 	</footer>
 
 	<!-- Bootstrap JS -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
