--- a/html/sobre-nosotros.html
+++ b/html/sobre-nosotros.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="es" class="pagina">
+
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Sobre Nosotros - Soluciones Informáticas</title>
 	<!-- Bootstrap CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-	<!-- Estilos personalizados -->
 	<link rel="stylesheet" href="../css/styles.css" />
 </head>
+
 <body>
 	<!-- HEADER -->
 	<header class="pagina__encabezado">
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
 			<div class="container">
 				<a class="navbar-brand" href="../index.html">Soluciones Informáticas</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+					aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
 				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav ms-auto gap-2">
 						<li class="nav-item">
@@ -44,44 +46,62 @@
 	<!-- BANNER -->
 	<div id="carouselExampleIndicators" class="carousel slide pagina__banner" data-bs-ride="carousel">
 		<div class="carousel-indicators">
-			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+				aria-current="true" aria-label="Slide 1"></button>
+			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+				aria-label="Slide 2"></button>
+			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+				aria-label="Slide 3"></button>
 		</div>
-    <div class="carousel-inner">
-      <div class="carousel-item active"><img src="../img/carrousel2.jpg" class="d-block w-100" alt="Banner de innovación tecnológica"></div>
-      <div class="carousel-item"><img src="img/carrousel1.jpg" class="d-block w-100" alt="Banner de soluciones personalizadas"></div>
-      <div class="carousel-item"><img src="img/carrousel3.jpg" class="d-block w-100" alt="Banner de soporte técnico experto"></div>
-    </div>
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+				<img src="../img/carrousel2.jpg" class="d-block w-100" alt="Innovación tecnológica">
+			</div>
+			<div class="carousel-item">
+				<img src="../img/carrousel1.jpg" class="d-block w-100" alt="Soluciones personalizadas">
+			</div>
+			<div class="carousel-item">
+				<img src="../img/carrousel3.jpg" class="d-block w-100" alt="Soporte técnico avanzado">
+			</div>
 		</div>
-		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Anterior</span>
-    </button>
-		<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Siguiente</span>
-    </button>
+		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+			data-bs-slide="prev">
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			<span class="visually-hidden">Anterior</span>
+		</button>
+		<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+			data-bs-slide="next">
+			<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			<span class="visually-hidden">Siguiente</span>
+		</button>
 	</div>
 
+	<!-- MAIN -->
 	<main class="sobre-nosotros-contenedor">
 		<section class="sobre-nosotros-intro">
 			<h2>¿Quiénes somos?</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			<p>
+				En Soluciones Informáticas somos un equipo de profesionales apasionados por la tecnología y la
+				inteligencia artificial. Nos dedicamos a transformar empresas a través de soluciones IT innovadoras y
+				personalizadas.
+			</p>
 		</section>
 
 		<section class="sobre-nosotros-experiencia">
 			<h2>Nuestra experiencia</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			<p>
+				Contamos con años de experiencia en el desarrollo de soluciones digitales, desde el diseño web hasta la
+				implementación de sistemas inteligentes que optimizan procesos y potencian el crecimiento empresarial.
+			</p>
 		</section>
 
 		<section class="sobre-nosotros-habilidades">
 			<div class="habilidad">
 				<h3>Habilidades Técnicas</h3>
 				<ul>
-					<li>Desarrollo Web</li>
-					<li>HTML, CSS, JavaScript</li>
-					<li>Gestión de Proyectos</li>
+					<li>Desarrollo Web y Móvil</li>
+					<li>Integración de Inteligencia Artificial</li>
+					<li>Soluciones Cloud y Seguridad Informática</li>
 				</ul>
 			</div>
 			<div class="habilidad">
@@ -95,18 +115,22 @@
 		</section>
 
 		<section class="sobre-nosotros-objetivo">
-			<h2>Mi objetivo</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			<h2>Nuestro objetivo</h2>
+			<p>
+				Impulsar la transformación digital de nuestros clientes, implementando soluciones tecnológicas avanzadas
+				que generen valor y mejoren la eficiencia operativa.
+			</p>
 		</section>
 	</main>
 
 	<!-- FOOTER -->
 	<footer class="pagina__pie">
-		<div>Enlace 1</div>
-		<div>Enlace 2</div>
-		<div>Enlace 3</div>
+		<div><a href="aviso-legal.html">Aviso Legal</a></div>
+		<div><a href="politica-privacidad.html">Política de Privacidad</a></div>
+		<div><a href="terminos.html">Términos y Condiciones</a></div>
 		<p>&copy; 2024 Soluciones Informáticas. Todos los derechos reservados.</p>
 	</footer>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
