Ajustes de estilo

--- a/html/blog.html
+++ b/html/blog.html
@@ -7,6 +7,7 @@
   <title>Blog - Soluciones Informáticas</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body class="d-flex flex-column min-vh-100 bg-light">
@@ -40,13 +41,12 @@
       <h2 class="mb-3">Bienvenido a nuestro Blog</h2>
       <p class="text-muted">
         Descubre las últimas tendencias en tecnología, inteligencia artificial y servicios IT. Te ofrecemos análisis,
-        consejos y
-        novedades para impulsar tu negocio con soluciones innovadoras.
+        consejos y novedades para impulsar tu negocio con soluciones innovadoras.
       </p>
     </section>
 
-    <!-- Carrusel -->
-    <div id="carouselExample" class="carousel slide mb-5" data-bs-ride="carousel">
+    <!-- Carrusel (Oculto en móviles) -->
+    <div id="carouselExample" class="carousel slide mb-5 d-none d-md-block" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="../img/carrousel3.jpg" class="d-block w-100" alt="Innovación en inteligencia artificial">
@@ -79,10 +79,9 @@
               <h3 class="card-title text-center">Cómo la IA Revoluciona el Desarrollo Web</h3>
               <p class="card-text text-center text-muted">
                 Explora cómo la integración de inteligencia artificial está transformando el desarrollo y optimización
-                de sitios web para
-                mejorar la experiencia del usuario.
+                de sitios web para mejorar la experiencia del usuario.
               </p>
-              <a href="#" class="btn btn-primary mt-auto">Leer más...</a>
+              <a href="#" class="btn btn-dark mt-auto">Leer más...</a>
             </div>
           </div>
         </div>
@@ -93,10 +92,9 @@
               <h3 class="card-title text-center">Tendencias en UX/UI para la Era Digital</h3>
               <p class="card-text text-center text-muted">
                 Descubre las mejores prácticas y herramientas que están definiendo el futuro del diseño de interfaces y
-                la experiencia de
-                usuario.
+                la experiencia de usuario.
               </p>
-              <a href="#" class="btn btn-primary mt-auto">Leer más...</a>
+              <a href="#" class="btn btn-dark mt-auto">Leer más...</a>
             </div>
           </div>
         </div>
@@ -107,10 +105,9 @@
               <h3 class="card-title text-center">Optimización del Rendimiento Web con Tecnología Avanzada</h3>
               <p class="card-text text-center text-muted">
                 Aprende estrategias y técnicas innovadoras para mejorar la velocidad y eficiencia de tu sitio web
-                utilizando soluciones IT de
-                vanguardia.
+                utilizando soluciones IT de vanguardia.
               </p>
-              <a href="#" class="btn btn-primary mt-auto">Leer más...</a>
+              <a href="#" class="btn btn-dark mt-auto">Leer más...</a>
             </div>
           </div>
         </div>
