--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Soluciones Informáticas: Servicios IT integrados con inteligencia artificial para potenciar tu negocio." />
+  <meta name="description"
+    content="Soluciones Informáticas: Servicios IT integrados con inteligencia artificial para potenciar tu negocio." />
   <meta name="keywords" content="tecnología, servicios IT, inteligencia artificial, desarrollo web, soporte técnico" />
   <meta name="author" content="Soluciones Informáticas" />
   <title>Soluciones Informáticas - Inicio</title>
@@ -76,7 +77,8 @@
     <section class="contenido__principal">
       <h2>Soluciones IT con Inteligencia Artificial</h2>
       <p>
-        Potencia tu negocio con nuestras soluciones integrales en IT y tecnologías de inteligencia artificial. Desarrollamos proyectos de
+        Potencia tu negocio con nuestras soluciones integrales en IT y tecnologías de inteligencia artificial.
+        Desarrollamos proyectos de
         desarrollo web, automatización de procesos y ofrecemos soporte técnico avanzado para optimizar tus operaciones.
       </p>
     </section>
@@ -95,8 +97,10 @@
     <article class="contenido__articulo">
       <h2>Transforma tu Empresa con IA</h2>
       <p>
-        Descubre cómo la integración de soluciones IT y la inteligencia artificial puede optimizar procesos y aumentar la eficiencia en tu
-        empresa. Contáctanos para recibir asesoramiento personalizado y dar el primer paso hacia la transformación digital.
+        Descubre cómo la integración de soluciones IT y la inteligencia artificial puede optimizar procesos y aumentar
+        la eficiencia en tu
+        empresa. Contáctanos para recibir asesoramiento personalizado y dar el primer paso hacia la transformación
+        digital.
       </p>
     </article>
 
