Corrección de estilos para que tengan coincidencias con los estilos de blog.html que utiliza exclusivamente Bootstrap

--- a/html/blog.html
+++ b/html/blog.html
@@ -34,17 +34,6 @@
     </nav>
   </header>
 
-  <!-- MAIN -->
-  <main class="container my-4 flex-grow-1">
-    <!-- Introducción -->
-    <section class="text-center mb-4">
-      <h2 class="mb-3">Bienvenido a nuestro Blog</h2>
-      <p class="text-muted">
-        Descubre las últimas tendencias en tecnología, inteligencia artificial y servicios IT. Te ofrecemos análisis,
-        consejos y novedades para impulsar tu negocio con soluciones innovadoras.
-      </p>
-    </section>
-
     <!-- Carrusel (Oculto en móviles) -->
     <div id="carouselExample" class="carousel slide mb-5 d-none d-md-block" data-bs-ride="carousel">
       <div class="carousel-inner">
@@ -67,6 +56,17 @@
         <span class="visually-hidden">Siguiente</span>
       </button>
     </div>
+
+      <!-- MAIN -->
+  <main class="container my-4 flex-grow-1">
+    <!-- Introducción -->
+    <section class="text-center mb-4">
+      <h2 class="mb-3">Bienvenido a nuestro Blog</h2>
+      <p class="text-muted">
+        Descubre las últimas tendencias en tecnología, inteligencia artificial y servicios IT. Te ofrecemos análisis,
+        consejos y novedades para impulsar tu negocio con soluciones innovadoras.
+      </p>
+    </section>
 
     <!-- Últimas Publicaciones -->
     <section>
@@ -122,7 +122,7 @@
         <div class="col-md-2">Aviso Legal</div>
         <div class="col-md-2">Política de Privacidad</div>
         <div class="col-md-2">Términos de Uso</div>
-        <div class="col-md-6">2024 Soluciones Informáticas. Todos los derechos reservados.</div>
+        <div class="col-md-6">2024 Soluciones Informáticas.</div>
       </div>
     </div>
   </footer>
