--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
 
   <!-- FOOTER -->
   <footer class="pagina__pie">
-    <div><a href="html/aviso-legal.html">Aviso Legal</a></div>
-    <div><a href="html/politica-privacidad.html">Política de Privacidad</a></div>
-    <div><a href="html/terminos.html">Términos y Condiciones</a></div>
-    <p>&copy; 2024 Soluciones Informáticas. Todos los derechos reservados.</p>
+    <div><a href="#">Aviso Legal</a></div>
+    <div><a href="#">Política de Privacidad</a></div>
+    <div><a href="#">Términos y Condiciones</a></div>
+    <p>&copy; 2024 Soluciones Informáticas.</p>
   </footer>
 
   <!-- Bootstrap JS -->
