--- a/html/contacto.html
+++ b/html/contacto.html
@@ -114,20 +114,21 @@
 			<!-- Información adicional -->
 			<section class="contacto__info">
 				<h2>Información adicional</h2>
-				<p><strong>Correo:</strong> a.aguirremneny@solucionesinformaticas.com</p>
+				<p><strong>Correo:</strong> a.aguirremneny@solinf.com</p>
 				<p><strong>Teléfono:</strong> +54 381 618 2287</p>
-				<p><strong>Dirección:</strong> San Lorenzo 1612, San Miguel de Tucumán</p>
+				<p><strong>Dirección:</strong> San Lorenzo 1612</p>
+				<p>San Miguel de Tucumán</p>
 			</section>
 		</div>
 	</main>
 
 	<!-- FOOTER -->
 	<footer class="pagina__pie">
-		<div><a href="aviso-legal.html">Aviso Legal</a></div>
-		<div><a href="politica-privacidad.html">Política de Privacidad</a></div>
-		<div><a href="terminos.html">Términos y Condiciones</a></div>
-		<p>&copy; 2024 Soluciones Informáticas. Todos los derechos reservados.</p>
-	</footer>
+		<div><a href="#">Aviso Legal</a></div>
+		<div><a href="#">Política de Privacidad</a></div>
+		<div><a href="#">Términos y Condiciones</a></div>
+		<p>&copy; 2024 Soluciones Informáticas.</p>
+	  </footer>
 
 	<!-- Bootstrap JS -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
