--- a/html/servicios.html
+++ b/html/servicios.html
@@ -121,12 +121,12 @@
 	</main>
 
 	<!-- FOOTER -->
-	<footer class="pagina__pie d-flex flex-wrap justify-content-around align-items-center">
-		<div><a href="aviso-legal.html">Aviso Legal</a></div>
-		<div><a href="politica-privacidad.html">Política de Privacidad</a></div>
-		<div><a href="terminos.html">Términos y Condiciones</a></div>
-		<p>&copy; 2024 Soluciones Informáticas. Todos los derechos reservados.</p>
-	</footer>
+	<footer class="pagina__pie">
+		<div><a href="#">Aviso Legal</a></div>
+		<div><a href="#">Política de Privacidad</a></div>
+		<div><a href="#"">Términos y Condiciones</a></div>
+		<p>&copy; 2024 Soluciones Informáticas.</p>
+	  </footer>
 
 	<!-- Bootstrap JS -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
