--- a/html/sobre-nosotros.html
+++ b/html/sobre-nosotros.html
@@ -125,11 +125,11 @@
 
 	<!-- FOOTER -->
 	<footer class="pagina__pie">
-		<div><a href="aviso-legal.html">Aviso Legal</a></div>
-		<div><a href="politica-privacidad.html">Política de Privacidad</a></div>
-		<div><a href="terminos.html">Términos y Condiciones</a></div>
-		<p>&copy; 2024 Soluciones Informáticas. Todos los derechos reservados.</p>
-	</footer>
+		<div><a href="#">Aviso Legal</a></div>
+		<div><a href="#">Política de Privacidad</a></div>
+		<div><a href="#"">Términos y Condiciones</a></div>
+		<p>&copy; 2024 Soluciones Informáticas.</p>
+	  </footer>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
