`Corregido el header de index.html para qeu tenga el mismo estilo que en las demás páginas dado que anteriormente era más alto`

--- a/index.html
+++ b/index.html
@@ -18,26 +18,36 @@
 
 <body class="pagina">
   <!-- HEADER -->
-  <header class="pagina__encabezado">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container">
-        <a class="navbar-brand" href="#">Soluciones Informáticas</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link active" href="index.html">Inicio</a></li>
-            <li class="nav-item"><a class="nav-link" href="html/contacto.html">Contacto</a></li>
-            <li class="nav-item"><a class="nav-link" href="html/sobre-nosotros.html">Sobre Nosotros</a></li>
-            <li class="nav-item"><a class="nav-link" href="html/servicios.html">Servicios</a></li>
-            <li class="nav-item"><a class="nav-link" href="html/blog.html">Blog</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </header>
+	<header class="pagina__encabezado">
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
+			<div class="container">
+				<a class="navbar-brand" href="../index.html">Soluciones Informáticas</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+					aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav ms-auto gap-2">
+						<li class="nav-item">
+							<a class="nav-link" href="../index.html">Inicio</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="html/contacto.html">Contacto</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="html/sobre-nosotros.html">Sobre nosotros</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link active" href="html/servicios.html">Servicios</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="html/blog.html">Blog</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</header>
 
   <div id="carouselExampleIndicators" class="carousel slide pagina__banner" data-bs-ride="carousel">
     <div class="carousel-indicators">
