' Optimización SEO, completando tags faltantes en todas las páginas, correciones de estilos varias, principalmente en la página de contacto.html '

--- a/html/blog.html
+++ b/html/blog.html
@@ -4,13 +4,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Explora las últimas tendencias en tecnología, inteligencia artificial y servicios IT. Noticias, análisis y consejos para potenciar tu negocio.">
+  <meta name="keywords" content="blog tecnología, inteligencia artificial, desarrollo web, UX/UI, optimización web, tendencias IT">
+  <meta name="author" content="Soluciones Informáticas">
+  <meta name="robots" content="index, follow">
+
+  <!-- OPEN GRAPH -->
+  <meta property="og:title" content="Blog de Tecnología - Soluciones Informáticas">
+  <meta property="og:description" content="Descubre las últimas noticias sobre inteligencia artificial, desarrollo web y soluciones IT innovadoras.">
+  <meta property="og:image" content="https://amalberto.github.io/BlogInformatica-74960/img/carrousel3.jpg">
+  <meta property="og:url" content="https://amalberto.github.io/BlogInformatica-74960/html/blog.html">
+  <meta property="og:type" content="article">
+
+  <!-- TWITTER CARD -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Blog de Tecnología - Soluciones Informáticas">
+  <meta name="twitter:description" content="Noticias, tendencias y análisis sobre inteligencia artificial, desarrollo web y UX/UI.">
+  <meta name="twitter:image" content="https://amalberto.github.io/BlogInformatica-74960/img/carrousel3.jpg">
+
+  <!-- FAVICON -->
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+
   <title>Blog - Soluciones Informáticas</title>
+
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../css/styles.css">
 </head>
-
-<body class="d-flex flex-column min-vh-100 bg-light">
 
   <!-- HEADER -->
   <header>
@@ -34,36 +56,36 @@
     </nav>
   </header>
 
-    <!-- CARROUSEL -->
-<div id="carouselExample" class="carousel slide pagina__banner mb-5 d-none d-md-block" data-bs-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="../img/carrousel3.jpg" class="d-block w-100" alt="Innovación en inteligencia artificial">
+  <!-- CARROUSEL -->
+  <div id="carouselExample" class="carousel slide pagina__banner mb-5 d-none d-md-block" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="../img/carrousel3.jpg" class="d-block w-100" alt="Innovación en inteligencia artificial">
+      </div>
+      <div class="carousel-item">
+        <img src="../img/carrousel2.jpg" class="d-block w-100" alt="Soluciones IT disruptivas">
+      </div>
+      <div class="carousel-item">
+        <img src="../img/carrousel1.jpg" class="d-block w-100" alt="Soporte técnico avanzado">
+      </div>
     </div>
-    <div class="carousel-item">
-      <img src="../img/carrousel2.jpg" class="d-block w-100" alt="Soluciones IT disruptivas">
-    </div>
-    <div class="carousel-item">
-      <img src="../img/carrousel1.jpg" class="d-block w-100" alt="Soporte técnico avanzado">
-    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Anterior</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    </button>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Anterior</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-  </button>
-</div>
 
 
 
-      <!-- MAIN -->
+  <!-- MAIN -->
   <main class="container my-4 flex-grow-1">
     <!-- Introducción -->
     <section class="text-center mb-4">
-      <h2 class="mb-3">Bienvenido a nuestro Blog</h2>
-      <p class="text-muted">
+      <h1 class="mb-3">Bienvenido a nuestro Blog</h1>
+      <p class="mx-3">
         Descubre las últimas tendencias en tecnología, inteligencia artificial y servicios IT. Te ofrecemos análisis,
         consejos y novedades para impulsar tu negocio con soluciones innovadoras.
       </p>
@@ -117,20 +139,21 @@
   </main>
 
   <!-- SECCIÓN FOOTER -->
-  <footer class="pagina__pie_blog bg-dark text-white py-2 mt-5 d-flex flex-wrap justify-content-around align-items-center text-center">
+  <footer
+    class="pagina__pie_blog bg-dark text-white py-2 mt-5 d-flex flex-wrap justify-content-around align-items-center text-center">
     <div class="p-2">
-        <a href="#" class="text-white text-decoration-none">Aviso Legal</a>
+      <a href="#" class="text-white text-decoration-none">Aviso Legal</a>
     </div>
     <div class="p-2">
-        <a href="#" class="text-white text-decoration-none">Política de Privacidad</a>
+      <a href="#" class="text-white text-decoration-none">Política de Privacidad</a>
     </div>
     <div class="p-2">
-        <a href="#" class="text-white text-decoration-none">Términos de Uso</a>
+      <a href="#" class="text-white text-decoration-none">Términos de Uso</a>
     </div>
     <div class="p-2">
-        © 2024 Soluciones Informáticas
+      © 2024 Soluciones Informáticas
     </div>
-</footer>
+  </footer>
 
 
 
