--- a/html/contacto.html
+++ b/html/contacto.html
@@ -4,7 +4,35 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+	<!-- SEO Meta Tags -->
+	<meta name="description"
+		content="Contáctanos para soluciones IT personalizadas con inteligencia artificial. Desarrollamos tecnología innovadora para potenciar tu negocio.">
+	<meta name="keywords"
+		content="contacto, soporte IT, soluciones IT, inteligencia artificial, desarrollo web, asesoramiento tecnológico">
+	<meta name="author" content="Soluciones Informáticas">
+	<meta name="robots" content="index, follow">
+
+	<!-- OPEN GRAPH -->
+	<meta property="og:title" content="Contacto - Soluciones Informáticas">
+	<meta property="og:description"
+		content="Escríbenos y descubre cómo podemos ayudarte con soluciones IT, inteligencia artificial y desarrollo tecnológico.">
+	<meta property="og:image" content="https://amalberto.github.io/BlogInformatica-74960/img/carrousel3.jpg">
+	<meta property="og:url" content="https://amalberto.github.io/BlogInformatica-74960/html/contacto.html">
+	<meta property="og:type" content="website">
+
+	<!-- TWITTER CARD -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="Contacto - Soluciones Informáticas">
+	<meta name="twitter:description"
+		content="Ponte en contacto con nosotros para recibir asesoramiento en inteligencia artificial y desarrollo IT.">
+	<meta name="twitter:image" content="https://amalberto.github.io/BlogInformatica-74960/img/carrousel3.jpg">
+
+	<!-- FAVICON -->
+	<link rel="icon" href="favicon.ico" type="image/x-icon" />
+
 	<title>Contacto - Soluciones Informáticas</title>
+
 	<!-- Bootstrap CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 	<link rel="stylesheet" href="../css/styles.css" />
@@ -78,19 +106,21 @@
 
 	<!-- MAIN -->
 	<main class="pagina__contenido">
-		<div class="container contacto__contenedor">
+		<div class="contenedor contacto__contenedor contenido__articulo text-center">
 			<!-- Introducción -->
 			<section class="contacto__introduccion">
-				<h2>Ponte en contacto con nosotros</h2>
-				<p>
+				<h1>Ponte en contacto con nosotros</h1>
+				<h2>
 					En Soluciones Informáticas estamos listos para ayudarte a transformar tu negocio con tecnología e
 					inteligencia artificial. Escríbenos y descubre cómo podemos impulsar tu éxito.
-				</p>
+					<hr>
+					<br>
+				</h2>
 			</section>
 
 			<!-- Formulario -->
 			<section class="contacto__formulario">
-				<h2>Formulario de contacto</h2>
+				<h3>Formulario de contacto</h3>
 				<form class="formulario-grid">
 					<div class="nombre">
 						<label for="nombre">Nombre:</label>
@@ -128,7 +158,7 @@
 		<div><a href="#">Política de Privacidad</a></div>
 		<div><a href="#">Términos y Condiciones</a></div>
 		<p>&copy; 2024 Soluciones Informáticas.</p>
-	  </footer>
+	</footer>
 
 	<!-- Bootstrap JS -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
