--- a/html/servicios.html
+++ b/html/servicios.html
@@ -4,7 +4,35 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+	<!-- SEO Meta Tags -->
+	<meta name="description"
+		content="Descubre nuestros servicios IT con inteligencia artificial: desarrollo web, consultoría tecnológica, optimización SEO y más.">
+	<meta name="keywords"
+		content="servicios IT, inteligencia artificial, desarrollo web, consultoría tecnológica, optimización SEO, tecnología innovadora">
+	<meta name="author" content="Soluciones Informáticas">
+	<meta name="robots" content="index, follow">
+
+	<!-- OPEN GRAPH -->
+	<meta property="og:title" content="Servicios IT - Soluciones Informáticas">
+	<meta property="og:description"
+		content="Te ofrecemos soluciones IT innovadoras, desarrollo web, consultoría tecnológica y optimización SEO con inteligencia artificial.">
+	<meta property="og:image" content="https://amalberto.github.io/BlogInformatica-74960/img/carrousel1.jpg">
+	<meta property="og:url" content="https://amalberto.github.io/BlogInformatica-74960/html/servicios.html">
+	<meta property="og:type" content="website">
+
+	<!-- TWITTER CARD -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="Servicios IT - Soluciones Informáticas">
+	<meta name="twitter:description"
+		content="Nuestros servicios incluyen desarrollo web, consultoría tecnológica y optimización SEO con IA para potenciar tu negocio.">
+	<meta name="twitter:image" content="https://amalberto.github.io/BlogInformatica-74960/img/carrousel1.jpg">
+
+	<!-- FAVICON -->
+	<link rel="icon" href="favicon.ico" type="image/x-icon" />
+
 	<title>Servicios - Soluciones Informáticas</title>
+
 	<!-- Bootstrap CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 	<link rel="stylesheet" href="../css/styles.css" />
@@ -129,7 +157,7 @@
 	  </footer>
 
 	<!-- Bootstrap JS -->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+	<script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
