--- a/html/sobre-nosotros.html
+++ b/html/sobre-nosotros.html
@@ -4,7 +4,31 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+	<!-- SEO Meta Tags -->
+	<meta name="description" content="Conoce a Soluciones Informáticas, expertos en tecnología e inteligencia artificial. Impulsamos la transformación digital con soluciones IT innovadoras.">
+	<meta name="keywords" content="sobre nosotros, equipo IT, transformación digital, inteligencia artificial, desarrollo web, soluciones empresariales">
+	<meta name="author" content="Soluciones Informáticas">
+	<meta name="robots" content="index, follow">
+
+	<!-- OPEN GRAPH -->
+	<meta property="og:title" content="Sobre Nosotros - Soluciones Informáticas">
+	<meta property="og:description" content="Somos un equipo de expertos en tecnología y transformación digital. Descubre cómo creamos soluciones IT avanzadas para empresas.">
+	<meta property="og:image" content="https://amalberto.github.io/BlogInformatica-74960/img/carrousel2.jpg">
+	<meta property="og:url" content="https://amalberto.github.io/BlogInformatica-74960/html/sobre-nosotros.html">
+	<meta property="og:type" content="website">
+
+	<!-- TWITTER CARD -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="Sobre Nosotros - Soluciones Informáticas">
+	<meta name="twitter:description" content="Descubre quiénes somos y cómo ayudamos a empresas a evolucionar con tecnología avanzada y soluciones IT.">
+	<meta name="twitter:image" content="https://amalberto.github.io/BlogInformatica-74960/img/carrousel2.jpg">
+
+	<!-- FAVICON -->
+	<link rel="icon" href="favicon.ico" type="image/x-icon" />
+
 	<title>Sobre Nosotros - Soluciones Informáticas</title>
+
 	<!-- Bootstrap CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 	<link rel="stylesheet" href="../css/styles.css" />
