--- a/index.html
+++ b/index.html
@@ -6,31 +6,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- SEO Meta Tags -->
-  <meta name="description"
-    content="Soluciones Informáticas ofrece servicios IT con inteligencia artificial para potenciar tu negocio. Desarrollo web, automatización y soporte técnico avanzado.">
-  <meta name="keywords"
-    content="tecnología, servicios IT, inteligencia artificial, desarrollo web, soporte técnico, automatización">
+  <meta name="description" content="Explora las últimas tendencias en tecnología, inteligencia artificial y servicios IT. Noticias, análisis y consejos para potenciar tu negocio.">
+  <meta name="keywords" content="blog tecnología, inteligencia artificial, desarrollo web, UX/UI, optimización web, tendencias IT">
   <meta name="author" content="Soluciones Informáticas">
   <meta name="robots" content="index, follow">
 
   <!-- OPEN GRAPH -->
-  <meta property="og:title" content="Soluciones Informáticas - Servicios IT con IA">
-  <meta property="og:description" content="Potencia tu negocio con inteligencia artificial y soluciones IT avanzadas.">
-  <meta property="og:image" content="https://amalberto.github.io/BlogInformatica-74960/img/banner.jpg">
-  <meta property="og:url" content="https://amalberto.github.io/BlogInformatica-74960/">
-  <meta property="og:type" content="website">
+  <meta property="og:title" content="Blog de Tecnología - Soluciones Informáticas">
+  <meta property="og:description" content="Descubre las últimas noticias sobre inteligencia artificial, desarrollo web y soluciones IT innovadoras.">
+  <meta property="og:image" content="https://amalberto.github.io/BlogInformatica-74960/img/carrousel3.jpg">
+  <meta property="og:url" content="https://amalberto.github.io/BlogInformatica-74960/blog.html">
+  <meta property="og:type" content="article">
 
   <!-- TWITTER CARD -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Soluciones Informáticas - Tecnología e IA">
-  <meta name="twitter:description"
-    content="Automatización, desarrollo web y soluciones IT inteligentes para tu negocio.">
-  <meta name="twitter:image" content="https://amalberto.github.io/BlogInformatica-74960/img/banner.jpg">
+  <meta name="twitter:title" content="Blog de Tecnología - Soluciones Informáticas">
+  <meta name="twitter:description" content="Noticias, tendencias y análisis sobre inteligencia artificial, desarrollo web y UX/UI.">
+  <meta name="twitter:image" content="https://amalberto.github.io/BlogInformatica-74960/img/carrousel3.jpg">
 
   <!-- FAVICON -->
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-  <title>Soluciones Informáticas - Inicio</title>
+  <title>Blog - Soluciones Informáticas</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -52,7 +49,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto gap-2">
             <li class="nav-item">
-              <a class="nav-link" href="../index.html">Inicio</a>
+              <a class="nav-link active" href="../index.html">Inicio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="html/contacto.html">Contacto</a>
@@ -61,7 +58,7 @@
               <a class="nav-link" href="html/sobre-nosotros.html">Sobre nosotros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="html/servicios.html">Servicios</a>
+              <a class="nav-link" href="html/servicios.html">Servicios</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="html/blog.html">Blog</a>
