Se agrega logo en navbar, se agrega favicon, se realizan ajustes varios de esilo

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -29,7 +29,7 @@
 	<meta name="twitter:image" content="https://amalberto.github.io/BlogInformatica-74960/img/carrousel3.jpg">
 
 	<!-- FAVICON -->
-	<link rel="icon" href="favicon.ico" type="image/x-icon" />
+	<link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
 
 	<title>Contacto - Soluciones Informáticas</title>
 
@@ -43,7 +43,10 @@
 	<header class="pagina__encabezado">
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
 			<div class="container">
-				<a class="navbar-brand" href="../index.html">Soluciones Informáticas</a>
+				<a class="navbar-brand" href="../index.html">
+					<img src="/img/logo.png" alt="Logo">
+					Soluciones Informáticas
+				</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
 					aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -72,7 +75,7 @@
 	</header>
 
 	<!-- BANNER -->
-	<div id="carouselExampleIndicators" class="carousel slide pagina__banner d-none d-md-block" data-bs-ride="carousel">
+	<div id="carouselExampleIndicators" class="carousel slide pagina__banner" data-bs-ride="carousel">
 		<div class="carousel-indicators">
 			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
 				aria-current="true" aria-label="Slide 1"></button>
