--- a/html/blog.html
+++ b/html/blog.html
@@ -6,14 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- SEO Meta Tags -->
-  <meta name="description" content="Explora las últimas tendencias en tecnología, inteligencia artificial y servicios IT. Noticias, análisis y consejos para potenciar tu negocio.">
-  <meta name="keywords" content="blog tecnología, inteligencia artificial, desarrollo web, UX/UI, optimización web, tendencias IT">
+  <meta name="description"
+    content="Explora las últimas tendencias en tecnología, inteligencia artificial y servicios IT. Noticias, análisis y consejos para potenciar tu negocio.">
+  <meta name="keywords"
+    content="blog tecnología, inteligencia artificial, desarrollo web, UX/UI, optimización web, tendencias IT">
   <meta name="author" content="Soluciones Informáticas">
   <meta name="robots" content="index, follow">
 
   <!-- OPEN GRAPH -->
   <meta property="og:title" content="Blog de Tecnología - Soluciones Informáticas">
-  <meta property="og:description" content="Descubre las últimas noticias sobre inteligencia artificial, desarrollo web y soluciones IT innovadoras.">
+  <meta property="og:description"
+    content="Descubre las últimas noticias sobre inteligencia artificial, desarrollo web y soluciones IT innovadoras.">
   <meta property="og:image" content="https://amalberto.github.io/BlogInformatica-74960/img/carrousel3.jpg">
   <meta property="og:url" content="https://amalberto.github.io/BlogInformatica-74960/html/blog.html">
   <meta property="og:type" content="article">
@@ -21,11 +24,12 @@
   <!-- TWITTER CARD -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Blog de Tecnología - Soluciones Informáticas">
-  <meta name="twitter:description" content="Noticias, tendencias y análisis sobre inteligencia artificial, desarrollo web y UX/UI.">
+  <meta name="twitter:description"
+    content="Noticias, tendencias y análisis sobre inteligencia artificial, desarrollo web y UX/UI.">
   <meta name="twitter:image" content="https://amalberto.github.io/BlogInformatica-74960/img/carrousel3.jpg">
 
   <!-- FAVICON -->
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
 
   <title>Blog - Soluciones Informáticas</title>
 
@@ -34,131 +38,134 @@
   <link rel="stylesheet" href="../css/styles.css">
 </head>
 
-  <!-- HEADER -->
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
-      <div class="container">
-        <a class="navbar-brand" href="#">Soluciones Informáticas</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
-            <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
-            <li class="nav-item"><a class="nav-link" href="sobre-nosotros.html">Sobre nosotros</a></li>
-            <li class="nav-item"><a class="nav-link" href="servicios.html">Servicios</a></li>
-            <li class="nav-item"><a class="nav-link active" href="blog.html">Blog</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </header>
-
-  <!-- CARROUSEL -->
-  <div id="carouselExample" class="carousel slide pagina__banner mb-5 d-none d-md-block" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="../img/carrousel3.jpg" class="d-block w-100" alt="Innovación en inteligencia artificial">
-      </div>
-      <div class="carousel-item">
-        <img src="../img/carrousel2.jpg" class="d-block w-100" alt="Soluciones IT disruptivas">
-      </div>
-      <div class="carousel-item">
-        <img src="../img/carrousel1.jpg" class="d-block w-100" alt="Soporte técnico avanzado">
+<!-- HEADER -->
+<header>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
+    <div class="container">
+      <a class="navbar-brand" href="../index.html">
+        <img src="/img/logo.png" alt="Logo">
+        Soluciones Informáticas
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+          <li class="nav-item"><a class="nav-link" href="sobre-nosotros.html">Sobre nosotros</a></li>
+          <li class="nav-item"><a class="nav-link" href="servicios.html">Servicios</a></li>
+          <li class="nav-item"><a class="nav-link active" href="blog.html">Blog</a></li>
+        </ul>
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Anterior</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    </button>
+  </nav>
+</header>
+
+<!-- CARROUSEL -->
+<div id="carouselExample" class="carousel slide pagina__banner mb-5" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="../img/carrousel3.jpg" class="d-block w-100" alt="Innovación en inteligencia artificial">
+    </div>
+    <div class="carousel-item">
+      <img src="../img/carrousel2.jpg" class="d-block w-100" alt="Soluciones IT disruptivas">
+    </div>
+    <div class="carousel-item">
+      <img src="../img/carrousel1.jpg" class="d-block w-100" alt="Soporte técnico avanzado">
+    </div>
   </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Anterior</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+  </button>
+</div>
 
 
 
-  <!-- MAIN -->
-  <main class="container my-4 flex-grow-1">
-    <!-- Introducción -->
-    <section class="text-center mb-4">
-      <h1 class="mb-3">Bienvenido a nuestro Blog</h1>
-      <p class="mx-3">
-        Descubre las últimas tendencias en tecnología, inteligencia artificial y servicios IT. Te ofrecemos análisis,
-        consejos y novedades para impulsar tu negocio con soluciones innovadoras.
-      </p>
-    </section>
+<!-- MAIN -->
+<main class="container my-4 flex-grow-1">
+  <!-- Introducción -->
+  <section class="text-center mb-4">
+    <h1 class="mb-3">Bienvenido a nuestro Blog</h1>
+    <p class="mx-3">
+      Descubre las últimas tendencias en tecnología, inteligencia artificial y servicios IT. Te ofrecemos análisis,
+      consejos y novedades para impulsar tu negocio con soluciones innovadoras.
+    </p>
+  </section>
 
-    <!-- Últimas Publicaciones -->
-    <section>
-      <h2 class="text-center mb-4">Últimas Publicaciones</h2>
-      <div class="row g-4">
-        <!-- Artículo 1 -->
-        <div class="col-md-4">
-          <div class="card h-100 shadow-sm">
-            <div class="card-body d-flex flex-column">
-              <h3 class="card-title text-center">Cómo la IA Revoluciona el Desarrollo Web</h3>
-              <p class="card-text text-center text-muted">
-                Explora cómo la integración de inteligencia artificial está transformando el desarrollo y optimización
-                de sitios web para mejorar la experiencia del usuario.
-              </p>
-              <a href="#" class="btn btn-dark mt-auto">Leer más...</a>
-            </div>
-          </div>
-        </div>
-        <!-- Artículo 2 -->
-        <div class="col-md-4">
-          <div class="card h-100 shadow-sm">
-            <div class="card-body d-flex flex-column">
-              <h3 class="card-title text-center">Tendencias en UX/UI para la Era Digital</h3>
-              <p class="card-text text-center text-muted">
-                Descubre las mejores prácticas y herramientas que están definiendo el futuro del diseño de interfaces y
-                la experiencia de usuario.
-              </p>
-              <a href="#" class="btn btn-dark mt-auto">Leer más...</a>
-            </div>
-          </div>
-        </div>
-        <!-- Artículo 3 -->
-        <div class="col-md-4">
-          <div class="card h-100 shadow-sm">
-            <div class="card-body d-flex flex-column">
-              <h3 class="card-title text-center">Optimización del Rendimiento Web con Tecnología Avanzada</h3>
-              <p class="card-text text-center text-muted">
-                Aprende estrategias y técnicas innovadoras para mejorar la velocidad y eficiencia de tu sitio web
-                utilizando soluciones IT de vanguardia.
-              </p>
-              <a href="#" class="btn btn-dark mt-auto">Leer más...</a>
-            </div>
+  <!-- Últimas Publicaciones -->
+  <section>
+    <h2 class="text-center mb-4">Últimas Publicaciones</h2>
+    <div class="row g-4">
+      <!-- Artículo 1 -->
+      <div class="col-md-4">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body d-flex flex-column">
+            <h3 class="card-title text-center">Cómo la IA Revoluciona el Desarrollo Web</h3>
+            <p class="card-text text-center text-muted">
+              Explora cómo la integración de inteligencia artificial está transformando el desarrollo y optimización
+              de sitios web para mejorar la experiencia del usuario.
+            </p>
+            <a href="#" class="btn btn-dark mt-auto">Leer más...</a>
           </div>
         </div>
       </div>
-    </section>
-  </main>
-
-  <!-- SECCIÓN FOOTER -->
-  <footer
-    class="pagina__pie_blog bg-dark text-white py-2 mt-5 d-flex flex-wrap justify-content-around align-items-center text-center">
-    <div class="p-2">
-      <a href="#" class="text-white text-decoration-none">Aviso Legal</a>
+      <!-- Artículo 2 -->
+      <div class="col-md-4">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body d-flex flex-column">
+            <h3 class="card-title text-center">Tendencias en UX/UI para la Era Digital</h3>
+            <p class="card-text text-center text-muted">
+              Descubre las mejores prácticas y herramientas que están definiendo el futuro del diseño de interfaces y
+              la experiencia de usuario.
+            </p>
+            <a href="#" class="btn btn-dark mt-auto">Leer más...</a>
+          </div>
+        </div>
+      </div>
+      <!-- Artículo 3 -->
+      <div class="col-md-4">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body d-flex flex-column">
+            <h3 class="card-title text-center">Optimización del Rendimiento Web con Tecnología Avanzada</h3>
+            <p class="card-text text-center text-muted">
+              Aprende estrategias y técnicas innovadoras para mejorar la velocidad y eficiencia de tu sitio web
+              utilizando soluciones IT de vanguardia.
+            </p>
+            <a href="#" class="btn btn-dark mt-auto">Leer más...</a>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="p-2">
-      <a href="#" class="text-white text-decoration-none">Política de Privacidad</a>
-    </div>
-    <div class="p-2">
-      <a href="#" class="text-white text-decoration-none">Términos de Uso</a>
-    </div>
-    <div class="p-2">
-      © 2024 Soluciones Informáticas
-    </div>
-  </footer>
+  </section>
+</main>
+
+<!-- SECCIÓN FOOTER -->
+<footer
+  class="pagina__pie_blog bg-dark text-white py-2 mt-5 d-flex flex-wrap justify-content-around align-items-center text-center">
+  <div class="p-2">
+    <a href="#" class="text-white text-decoration-none">Aviso Legal</a>
+  </div>
+  <div class="p-2">
+    <a href="#" class="text-white text-decoration-none">Política de Privacidad</a>
+  </div>
+  <div class="p-2">
+    <a href="#" class="text-white text-decoration-none">Términos de Uso</a>
+  </div>
+  <div class="p-2">
+    © 2024 Soluciones Informáticas
+  </div>
+</footer>
 
 
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
