--- a/html/sobre-nosotros.html
+++ b/html/sobre-nosotros.html
@@ -6,14 +6,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 	<!-- SEO Meta Tags -->
-	<meta name="description" content="Conoce a Soluciones Informáticas, expertos en tecnología e inteligencia artificial. Impulsamos la transformación digital con soluciones IT innovadoras.">
-	<meta name="keywords" content="sobre nosotros, equipo IT, transformación digital, inteligencia artificial, desarrollo web, soluciones empresariales">
+	<meta name="description"
+		content="Conoce a Soluciones Informáticas, expertos en tecnología e inteligencia artificial. Impulsamos la transformación digital con soluciones IT innovadoras.">
+	<meta name="keywords"
+		content="sobre nosotros, equipo IT, transformación digital, inteligencia artificial, desarrollo web, soluciones empresariales">
 	<meta name="author" content="Soluciones Informáticas">
 	<meta name="robots" content="index, follow">
 
 	<!-- OPEN GRAPH -->
 	<meta property="og:title" content="Sobre Nosotros - Soluciones Informáticas">
-	<meta property="og:description" content="Somos un equipo de expertos en tecnología y transformación digital. Descubre cómo creamos soluciones IT avanzadas para empresas.">
+	<meta property="og:description"
+		content="Somos un equipo de expertos en tecnología y transformación digital. Descubre cómo creamos soluciones IT avanzadas para empresas.">
 	<meta property="og:image" content="https://amalberto.github.io/BlogInformatica-74960/img/carrousel2.jpg">
 	<meta property="og:url" content="https://amalberto.github.io/BlogInformatica-74960/html/sobre-nosotros.html">
 	<meta property="og:type" content="website">
@@ -21,11 +24,12 @@
 	<!-- TWITTER CARD -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="Sobre Nosotros - Soluciones Informáticas">
-	<meta name="twitter:description" content="Descubre quiénes somos y cómo ayudamos a empresas a evolucionar con tecnología avanzada y soluciones IT.">
+	<meta name="twitter:description"
+		content="Descubre quiénes somos y cómo ayudamos a empresas a evolucionar con tecnología avanzada y soluciones IT.">
 	<meta name="twitter:image" content="https://amalberto.github.io/BlogInformatica-74960/img/carrousel2.jpg">
 
 	<!-- FAVICON -->
-	<link rel="icon" href="favicon.ico" type="image/x-icon" />
+	<link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
 
 	<title>Sobre Nosotros - Soluciones Informáticas</title>
 
@@ -39,7 +43,10 @@
 	<header class="pagina__encabezado">
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
 			<div class="container">
-				<a class="navbar-brand" href="../index.html">Soluciones Informáticas</a>
+				<a class="navbar-brand" href="../index.html">
+					<img src="/img/logo.png" alt="Logo">
+					Soluciones Informáticas
+				</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
 					aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -68,7 +75,7 @@
 	</header>
 
 	<!-- BANNER -->
-	<div id="carouselExampleIndicators" class="carousel slide pagina__banner d-none d-md-block" data-bs-ride="carousel">
+	<div id="carouselExampleIndicators" class="carousel slide pagina__banner" data-bs-ride="carousel">
 		<div class="carousel-indicators">
 			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
 				aria-current="true" aria-label="Slide 1"></button>
@@ -154,7 +161,7 @@
 		<div><a href="#"">Términos y Condiciones</a></div>
 		<p>&copy; 2024 Soluciones Informáticas.</p>
 	  </footer>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+	<script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
