--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
   <meta name="twitter:image" content="https://amalberto.github.io/BlogInformatica-74960/img/carrousel3.jpg">
 
   <!-- FAVICON -->
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
 
-  <title>Blog - Soluciones Informáticas</title>
+  <title>Inicio - Soluciones Informáticas</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -41,7 +41,10 @@
   <header class="pagina__encabezado">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
       <div class="container">
-        <a class="navbar-brand" href="../index.html">Soluciones Informáticas</a>
+        <a class="navbar-brand" href="../index.html">
+          <img src="img/logo.png" alt="Logo"> 
+          Soluciones Informáticas
+      </a>      
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
