Se agrega el 'modo nocturno' que le permite al usuario poder visualizar en colores alternativos los contenidos para mayor comodidad. Se elimina _contacto.scss dado que no se estaba utilizando, a lhaber sido reemplazado por _formularios.scss

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -39,6 +39,11 @@
 </head>
 
 <body class="pagina contacto">
+ <!-- Toggler de modo nocturno -->
+ <input type="checkbox" id="modoNocturnoCheckbox">
+ <label for="modoNocturnoCheckbox" class="modo-nocturno-toggle">
+   <span class="slider"></span>
+ </label>
 	<!-- HEADER -->
 	<header class="pagina__encabezado">
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
