--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- SEO Meta Tags -->
-  <meta name="description" content="Explora las últimas tendencias en tecnología, inteligencia artificial y servicios IT. Noticias, análisis y consejos para potenciar tu negocio.">
-  <meta name="keywords" content="blog tecnología, inteligencia artificial, desarrollo web, UX/UI, optimización web, tendencias IT">
+  <meta name="description"
+    content="Explora las últimas tendencias en tecnología, inteligencia artificial y servicios IT. Noticias, análisis y consejos para potenciar tu negocio.">
+  <meta name="keywords"
+    content="blog tecnología, inteligencia artificial, desarrollo web, UX/UI, optimización web, tendencias IT">
   <meta name="author" content="Soluciones Informáticas">
   <meta name="robots" content="index, follow">
 
   <!-- OPEN GRAPH -->
   <meta property="og:title" content="Blog de Tecnología - Soluciones Informáticas">
-  <meta property="og:description" content="Descubre las últimas noticias sobre inteligencia artificial, desarrollo web y soluciones IT innovadoras.">
+  <meta property="og:description"
+    content="Descubre las últimas noticias sobre inteligencia artificial, desarrollo web y soluciones IT innovadoras.">
   <meta property="og:image" content="https://amalberto.github.io/BlogInformatica-74960/img/carrousel3.jpg">
   <meta property="og:url" content="https://amalberto.github.io/BlogInformatica-74960/blog.html">
   <meta property="og:type" content="article">
@@ -21,7 +24,8 @@
   <!-- TWITTER CARD -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Blog de Tecnología - Soluciones Informáticas">
-  <meta name="twitter:description" content="Noticias, tendencias y análisis sobre inteligencia artificial, desarrollo web y UX/UI.">
+  <meta name="twitter:description"
+    content="Noticias, tendencias y análisis sobre inteligencia artificial, desarrollo web y UX/UI.">
   <meta name="twitter:image" content="https://amalberto.github.io/BlogInformatica-74960/img/carrousel3.jpg">
 
   <!-- FAVICON -->
@@ -37,14 +41,21 @@
 </head>
 
 <body class="pagina">
+
+  <!-- Toggler de modo nocturno -->
+  <input type="checkbox" id="modoNocturnoCheckbox">
+  <label for="modoNocturnoCheckbox" class="modo-nocturno-toggle">
+    <span class="slider"></span>
+  </label>
+
   <!-- HEADER -->
   <header class="pagina__encabezado">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
       <div class="container">
         <a class="navbar-brand" href="../index.html">
-          <img src="img/logo.png" alt="Logo"> 
+          <img src="img/logo.png" alt="Logo">
           Soluciones Informáticas
-      </a>      
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -129,15 +140,15 @@
       </p>
     </article>
 
-        <!-- Noticias -->
-        <aside class="contenido__lateral">
-          <h3>Noticias</h3>
-          <ul>
-            <li>Novedades en inteligencia artificial aplicada a negocios</li>
-            <li>Actualizaciones en ciberseguridad y tecnología</li>
-            <li>Lanzamiento de nuestro asistente virtual inteligente</li>
-          </ul>
-        </aside>
+    <!-- Noticias -->
+    <aside class="contenido__lateral">
+      <h3>Noticias</h3>
+      <ul>
+        <li>Novedades en inteligencia artificial aplicada a negocios</li>
+        <li>Actualizaciones en ciberseguridad y tecnología</li>
+        <li>Lanzamiento de nuestro asistente virtual inteligente</li>
+      </ul>
+    </aside>
 
     <!-- Listas -->
     <div class="contenido__listas">
