--- a/html/blog.html
+++ b/html/blog.html
@@ -37,7 +37,12 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../css/styles.css">
 </head>
-
+<body>
+      <!-- Toggler de modo nocturno -->
+      <input type="checkbox" id="modoNocturnoCheckbox">
+      <label for="modoNocturnoCheckbox" class="modo-nocturno-toggle">
+          <span class="slider"></span>
+      </label>
 <!-- HEADER -->
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
