Se realizan correciones el formateo de los documentos, se eliminan comentarios innecesarios, se corrigen errores de cierre de etiqueta en el footer en los archivos HTML

--- a/html/servicios.html
+++ b/html/servicios.html
@@ -162,7 +162,7 @@
 	<footer class="pagina__pie">
 		<div><a href="#">Aviso Legal</a></div>
 		<div><a href="#">Política de Privacidad</a></div>
-		<div><a href="#"">Términos y Condiciones</a></div>
+		<div><a href="#">Términos y Condiciones</a></div>
 		<p>&copy; 2024 Soluciones Informáticas.</p>
 	  </footer>
 
