--- a/html/sobre-nosotros.html
+++ b/html/sobre-nosotros.html
@@ -171,7 +171,7 @@
 	<footer class="pagina__pie">
 		<div><a href="#">Aviso Legal</a></div>
 		<div><a href="#">Política de Privacidad</a></div>
-		<div><a href="#"">Términos y Condiciones</a></div>
+		<div><a href="#">Términos y Condiciones</a></div>
 		<p>&copy; 2024 Soluciones Informáticas.</p>
 	  </footer>
 	<script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
